tidy up order endpoint
